# MoGe

./: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  MOGRAMMETRY_README.md  README.md  infer.py  pyproject.toml  requirements.txt  setup.py
baselines/: moge.py
configs/train/: v2.json
docs/: eval.md  normal.md  onnx.md  train.md
examples/: config_fast.yaml  config_quality.yaml  example_advanced.py  example_basic.py
moge/model/: v2.py
moge/scripts/: app.py  cli.py  eval_baseline.py  infer.py  infer_baseline.py  infer_panorama.py  vis_data.py
moge/test/: dataloader.py  metrics.py
moge/train/: dataloader.py  losses.py
moge/utils/: geometry_cpu.py  geometry_numpy.py  panorama.py
mogrammetry/: __init__.py  alignment.py  colmap_parser.py  config.py  fusion.py  logger.py  mesh.py  pipeline.py
scripts/: app_mogrammetry.py  colmap_integration.py  infer_panorama.py  mogrammetry_cli.py
tests/: test_mogrammetry.py
