[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moge"
version = "1.0.0"
description = "MoGe: Unlocking Accurate Monocular Geometry Estimation for Open-Domain Images with Optimal Training Supervision"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "click",
    "opencv-python",
    "scipy",
    "matplotlib",
    "trimesh",
    "pillow",
    "huggingface_hub",
    "numpy",
    "torch>=2.0.0",
    "torchvision",
    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git@db0c68cbdc9a26bea1a580a2e39c6b8ff12f87b5"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/microsoft/MoGe"

[tool.setuptools.packages.find]
where = ["."]
include = ["moge*"]

[project.scripts]
moge = "moge.scripts.cli:main"